[package]
name = "tvix-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tvix"
path = "src/main.rs"

[dependencies]
nix-compat = { path = "../nix-compat" }
tvix-build = { path = "../build" }
tvix-castore = { path = "../castore" }
tvix-store = { path = "../store", default-features = false, features = []}
tvix-eval = { path = "../eval" }
tvix-glue = { path = "../glue" }
tvix-tracing = { path = "../tracing" }
bytes = "1.4.0"
clap = { version = "4.0", features = ["derive", "env"] }
dirs = "4.0.0"
rustyline = "10.0.0"
rnix = "0.11.0"
thiserror = "1.0.38"
tokio = "1.28.0"
tracing = "0.1.40"
tracing-indicatif = "0.3.6"

[dependencies.wu-manber]
git = "https://github.com/tvlfyi/wu-manber.git"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
