[package]
name = "tvix-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tvix"
path = "src/main.rs"

[dependencies]
nix-compat = { path = "../nix-compat" }
tvix-build = { path = "../build" }
tvix-castore = { path = "../castore" }
tvix-store = { path = "../store", default-features = false, features = []}
tvix-eval = { path = "../eval" }
tvix-glue = { path = "../glue" }
tvix-tracing = { path = "../tracing" }
bytes = "1.7.1"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "4.0.0"
rustyline = "10.1.1"
rnix = "0.11.0"
rowan = "*"
smol_str = "0.2.2"
thiserror = "1.0.63"
tokio = "1.39.3"
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
rustc-hash = "2.0.0"
mimalloc = "0.1.43"

[dependencies.wu-manber]
git = "https://github.com/tvlfyi/wu-manber.git"

[dev-dependencies]
expect-test = "1.5.0"

[features]
default = []
tracy = ["tvix-tracing/tracy"]
