[package]
name = "tvix-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tvix"
path = "src/main.rs"

[dependencies]
nix-compat = { path = "../nix-compat" }
tvix-build = { path = "../build" }
tvix-castore = { path = "../castore" }
tvix-store = { path = "../store", default-features = false, features = []}
tvix-eval = { path = "../eval" }
tvix-glue = { path = "../glue" }
tvix-tracing = { path = "../tracing" }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dirs = { workspace = true }
rustyline = { workspace = true }
rnix = { workspace = true }
rowan = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = { workspace = true }
rustc-hash = { workspace = true }
mimalloc = { workspace = true }
wu-manber = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }

[features]
default = []
tracy = ["tvix-tracing/tracy"]
