[package]
name = "tvix-derivation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
thiserror = "1.0.38"
tvix-store-bin = { path = "../store" }

[dev-dependencies.test-generator]
# This fork of test-generator adds support for cargo workspaces, see
# also https://github.com/frehberg/test-generator/pull/14
git = "https://github.com/JamesGuthrie/test-generator.git"
rev = "82e799979980962aec1aa324ec6e0e4cad781f41"

[dev-dependencies]
serde_json = "1.0"
test-case = "2.2.2"
