[package]
name = "tvix-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.9", features = ["tokio", "gzip", "bzip2", "xz"]}
bstr = "1.6.0"
bytes = "1.4.0"
data-encoding = "2.6.0"
futures = "0.3.30"
magic = "0.16.2"
nix-compat = { path = "../nix-compat" }
pin-project = "1.1"
reqwest = { version = "0.12.0", features = ["rustls-tls-native-roots"], default-features = false }
tvix-build = { path = "../build", default-features = false, features = []}
tvix-eval = { path = "../eval" }
tvix-castore = { path = "../castore" }
tvix-store = { path = "../store", default-features = false, features = []}
tvix-tracing = { path = "../tracing" }
tracing = "0.1.37"
tracing-indicatif = "0.3.6"
tokio = "1.28.0"
tokio-tar = "0.3.1"
tokio-util = { version = "0.7.9", features = ["io", "io-util", "compat"] }
thiserror = "1.0.38"
serde = "1.0.195"
serde_json = "1.0"
sha2 = "0.10.8"
sha1 = "0.10.6"
md-5 = "0.10.6"
url = "2.4.0"
walkdir = "2.4.0"
clap = { version = "4.4.0", default-features = false }

[dependencies.wu-manber]
git = "https://github.com/tvlfyi/wu-manber.git"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex-literal = "0.4.1"
lazy_static = "1.4.0"
mimalloc = "0.1.43"
nix = { version = "0.27.1", features = [ "fs" ] }
pretty_assertions = "1.4.0"
rstest = "0.19.0"
tempfile = "3.8.1"
tokio-test = "0.4.3"

[features]
default = ["nix_tests"]
# Enables running the Nix language test suite from the original C++
# Nix implementation (at version 2.3) against Tvix.
nix_tests = []

[[bench]]
name = "eval"
harness = false
