[package]
name = "nar-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["http2"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
data-encoding = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
prost = { workspace = true }
nix-compat = { path = "../nix-compat", features = ["async"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-listener = { workspace = true, features = ["axum07", "clap", "multi-listener", "sd_listen"] }
tokio-util = { workspace = true, features = ["io", "io-util", "compat"] }
tonic = { workspace = true, features = ["tls", "tls-roots"] }
tvix-castore = { path = "../castore" }
tvix-store = { path = "../store" }
tvix-tracing = { path = "../tracing", features = ["tonic", "axum"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
serde = { workspace = true, features = ["derive"] }
lru = { workspace = true }
parking_lot = { workspace = true }
mimalloc = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }

[features]
default = ["otlp"]
otlp = ["tvix-tracing/otlp"]

[dev-dependencies]
hex-literal = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
