[package]
name = "nix-compat-derive-tests"
version = "0.1.0"
edition = "2021"

[features]
compile-tests = []

[dev-dependencies]
hex-literal = "0.4.1"
pretty_assertions = "1.4.0"
rstest = "0.19.0"
tokio-test = "0.4.3"
trybuild = "1.0.96"

[dev-dependencies.nix-compat]
version = "0.1.0"
path = "../nix-compat"
features = ["test", "wire"]

[dev-dependencies.nix-compat-derive]
version = "0.1.0"
path = "../nix-compat-derive"

[dev-dependencies.tokio]
version = "^1.38"
features = ["io-util", "macros"]
