[package]
name = "nix-compat-derive-tests"
version = "0.1.0"
edition = "2021"

[features]
compile-tests = []

[dev-dependencies]
hex-literal = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
tokio-test = { workspace = true }
trybuild = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros"] }

[dev-dependencies.nix-compat]
version = "0.1.0"
path = "../nix-compat"
features = ["test", "wire"]

[dev-dependencies.nix-compat-derive]
version = "0.1.0"
path = "../nix-compat-derive"
