[package]
name = "nix-compat-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }
syn = { version = "2.0.76", features = ["full", "extra-traits"] }

[dev-dependencies]
hex-literal = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros"] }

[dev-dependencies.nix-compat]
path = "../nix-compat"
default-features = false
features = ["async", "wire", "test"]
