[package]
name = "nix-compat"
version = "0.1.0"
edition = "2021"

[features]
# async NAR writer. Also needs the `wire` feature.
async = ["tokio"]
# code emitting low-level packets used in the daemon protocol.
wire = ["tokio", "pin-project-lite", "bytes"]
test = []

# Enable all features by default.
default = ["async", "wire", "nix-compat-derive"]

[dependencies]
bitflags = "2.6.0"
bstr = { version = "1.10.0", features = ["alloc", "unicode", "serde"] }
data-encoding = "2.6.0"
ed25519 = "2.2.3"
ed25519-dalek = "2.1.1"
enum-primitive-derive = "0.3.0"
glob = "0.3.1"
mimalloc = "0.1.43"
nom = "7.1.3"
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
thiserror = "1.0.63"
tracing = "0.1.40"

[dependencies.bytes]
optional = true
version = "1.7.1"

[dependencies.nix-compat-derive]
path = "../nix-compat-derive"
optional = true

[dependencies.tokio]
optional = true
version = "1.39.3"
features = ["io-util", "macros"]

[dependencies.pin-project-lite]
optional = true
version = "0.2.14"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
futures = { version = "0.3.30", default-features = false, features = ["executor"] }
hex-literal = "0.4.1"
lazy_static = "1.5.0"
mimalloc = "0.1.43"
pretty_assertions = "1.4.0"
rstest = "0.19.0"
serde_json = "1.0"
smol_str = "0.2.2"
tokio-test = "0.4.4"
zstd = "^0.13.2"

[[bench]]
name = "derivation_parse_aterm"
harness = false

[[bench]]
name = "narinfo_parse"
harness = false
